Fix text overlapping in the text console.
git-svn-id: http://fbug.googlecode.com/svn@2521 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.4/skin/classic/testResult.css
+++ b/fbtest/branches/fbtest1.4/skin/classic/testResult.css
@@ -37,6 +37,7 @@
     background-position: 2px 2px;
     padding-left: 18px;
     position: absolute;
+    background-color: white;
 }
 
 .testError .testResultMessage,
